removed “Get the best experience with Internet Explorer 10.” browser alert

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <script src="res/js/floatingPanels.js"></script>
 <!-- /local-resources -->
 </head>
-<body class="write alert-shown write-ready"><div class="useragent-alert"><p>FUNCTION LIMITED. Get the best experience with Internet Explorer 10.</p><div class="link"><a href="http://www.beautyoftheweb.com/" target="_blank">Beauty of the Web for Upgrading to Internet Explorer</a></div></div>
+<body class="write write-ready">
 <header class="site-title">
 <h1 class="title"><a href="http://www.theshodo.com/"><img src="res/img/logo_side_01.png" width="60" height="224" alt="The Shodo"></a></h1>
 </header>
