Fixed urls to images in css/js (brings in preparing ink animation)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <script src="res/js/TheShodo.js"></script>
 <script src="res/js/TheShodo.FloatingPanel.js"></script>
 <script>
-    TheShodo.baseUrl = 'http://www.theshodo.com';
+    TheShodo.baseUrl = 'http://localhost:5000';
     TheShodo.storageBaseUrl = 'http://blob.theshodo.com';
-    TheShodo.sharedBaseUrl = 'http://blob.theshodo.com';
+    TheShodo.sharedBaseUrl = 'http://localhost:5000';
     TheShodo.antiForgeryToken = {
         name: '__RequestVerificationToken',
         token: '8e5yC/fexKdI3FbMX7cwnxv7Sn3sTKzbiMWeJAbPrgPx+HqNdmJX6NPmJetMFHd9Kd4J36bYqUslnztNwyy2sOZYTvPUZlwm5xZawvmS6/b7DyQs6M9ol4dgJ5O3qU3p6QBzx1bkt5X4TOSJSts/inNdFR8KW9Zy3uHkx5ioG4AWLAu6'
