remove site-information div (site navigation, user info, rights, etc)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <meta name="msapplication-task" content="name=Gallery;action-uri=Gallery;icon-uri=/favicon.ico">
 <meta name="msapplication-TileImage" content="shared/img/icon_shodo_tile_01.png">
 <meta name="msapplication-TileColor" content="#ffffff">
+<script type="text/javascript" async="" src="res/js/ga.js"></script><script type="text/javascript" src="res/js/yux5pqj.js"></script>
 <script type="text/javascript">try { Typekit.load(); } catch (e) { }</script> 
 <link rel="shortcut icon" href="http://www.theshodo.com/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="res/css/base.css">
@@ -865,45 +866,13 @@
 
 <script type="text/html" id="floating-panel-content-loading">
 <div>
-<img src="http://blob.theshodo.com/shared/img/loading_L.gif" alt="Loading..." width="68" height="68" />
+<img src="res/img/loading_L.gif" alt="Loading..." width="68" height="68" />
 </div>
 </script>
 
 
 <span class="playing-movie-notice" style="left: 1078px; top: 232px; display: none;"><span>Preparing ink.</span><br><span>Please wait a moment.</span></span></article>
 
-<div class="site-information">
-<div class="utilities">
-
-<nav class="site-navigation">
-<ul class="main-contents">
-<li><a href="#/">Home</a></li>
-<li class="current-page"><a href="res/Write   The Shodo.htm">Write</a></li>
-<li><a href="#/Gallery">Gallery</a></li>
-</ul>
-<ul class="sub-contents">
-<li><a href="#/TechReview" class="panel-content">Tech-review</a></li>
-</ul>
-</nav>
-
-<div class="user-info">
-<!-- if signed -->
-<dl><dt>Signed in as</dt><dd><img src="res/img/icon_user_anonymous_01.png" width="18" height="18" alt="">Trial User</dd></dl>
-<nav><a href="#/SignIn?ReturnUrl=%2FWrite">Account Sign in</a></nav>
-<!-- /if signed -->
-</div><div class="sound-control pseudo-muted"><div class="mute"></div><div class="bar" style="background-position: 3px 50%, 0px 50%, -77px 50%, 3px 50%;"></div></div>
-</div>
-
-<footer class="rights">
-<ul>
-<li><small><a href="http://ie.microsoft.com/" target="_blank"><img src="res/img/text_rights_02.png" width="60" height="21" alt="Internet Explorer"></a></small></li>
-<li><small><a href="http://www.b-architects.com/works/casestudies.html" target="_blank"><img src="res/img/text_rights_01.png" width="130" height="21" alt="Business Architects"></a></small></li>
-<li><small><a href="http://www.microsoft.com/windowsazure/" target="_blank"><img src="res/img/text_rights_03.png" width="114" height="21" alt="Windows Azure"></a></small></li>
-<li><small>Supported by <a href="http://www.beautyoftheweb.com/" target="_blank">Microsoft</a></small></li>
-</ul>
-<p>[Tech Review] <a href="http://msdn.microsoft.com/ja-jp/windowsazure/hh180847">How to work HTML5 support site on Windows Azure (Only Japanese)</a></p>
-</footer>
-</div>
 
 
 
