remove xga checks (resources are missing, so have to fallback to the ‘default’), remove tracking js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <meta name="msapplication-task" content="name=Gallery;action-uri=Gallery;icon-uri=/favicon.ico">
 <meta name="msapplication-TileImage" content="shared/img/icon_shodo_tile_01.png">
 <meta name="msapplication-TileColor" content="#ffffff">
-<script type="text/javascript" async="" src="res/js/ga.js"></script><script type="text/javascript" src="res/js/yux5pqj.js"></script>
 <script type="text/javascript">try { Typekit.load(); } catch (e) { }</script> 
 <link rel="shortcut icon" href="http://www.theshodo.com/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="res/css/base.css">
@@ -45,7 +44,7 @@
 <script src="res/js/floatingPanels.js"></script>
 <!-- /local-resources -->
 </head>
-<body class="write write-ready">
+<body class="write">
 <header class="site-title">
 <h1 class="title"><a href="http://www.theshodo.com/"><img src="res/img/logo_side_01.png" width="60" height="224" alt="The Shodo"></a></h1>
 </header>
