switch to mp4 movie (ogv shows weird striped right border)

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 <div id="write-tools">
 <video id="write-tools-movie" width="540" height="640" poster="res/img/steel.png" style="display: none;">
-<source src="res/media/movie.ogv" type="video/ogg">
+<source src="res/media/movie.mp4" type="video/mp4">
 </video>
 <a id="write-tools-ink" href="#/Write#" style="display: inline;"><img id="write-tools-ink-label" class="rollover" src="res/img/btn_suzuri_01.png" alt="硯 - Ink Selection"></a>
 <a id="write-tools-stage" href="#/Write#" style="display: inline;">
