fix write-tools being displayed during movie playback

--- a/index.html
+++ b/index.html
@@ -346,13 +346,13 @@
 <video id="write-tools-movie" width="540" height="640" poster="res/img/steel.png" style="display: none;">
 <source src="res/media/movie.mp4" type="video/mp4">
 </video>
-<a id="write-tools-ink" href="#/Write#" style="display: inline;"><img id="write-tools-ink-label" class="rollover" src="res/img/btn_suzuri_01.png" alt="硯 - Ink Selection"></a>
-<a id="write-tools-stage" href="#/Write#" style="display: inline;">
-<img id="write-tools-stage-label" class="rollover" src="res/img/btn_fude_01.png" alt="筆 - Brush Selection" style="visibility: visible; opacity: 1;">
-<img id="write-fude-small" src="res/img/fude_L.png" alt="" style="visibility: visible; opacity: 1;"><img id="write-fude-medium" src="res/img/fude_M.png" alt="" style="visibility: hidden; opacity: 0;"><img id="write-fude-large" src="res/img/fude_B.png" alt="" style="visibility: visible; opacity: 1;">
+<a id="write-tools-ink" href="#/Write#"><img id="write-tools-ink-label" class="rollover" src="res/img/btn_suzuri_01.png" alt="硯 - Ink Selection"></a>
+<a id="write-tools-stage" href="#/Write#">
+<img id="write-tools-stage-label" class="rollover" src="res/img/btn_fude_01.png" alt="筆 - Brush Selection">
+<img id="write-fude-small" src="res/img/fude_L.png" alt=""><img id="write-fude-medium" src="res/img/fude_M.png" alt="" style="visibility: hidden; opacity: 0;"><img id="write-fude-large" src="res/img/fude_B.png" alt="" style="visibility: visible; opacity: 1;">
 <!-- /write-tools-stage --></a>
 
-<a id="hand-visibility-checkbox" href="#/Write#" class="checked" style="display: inline;">show hand holding brush</a>
+<a id="hand-visibility-checkbox" href="#/Write#" class="checked">show hand holding brush</a>
 
 <!-- /write-tools --></div>
 <!-- /write-container-wrap --></div>
