remove obsolete javascript (post ajax on save => must rewrite to save png, save env like volume, usa-i, sound control, tech review)

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 <!-- /submenu --></div>
 <a class="close-menu" href="">Close</a>
 <!-- /menu-paper --></li>
-<li class="menu-copybook menu-folding" style="display: inline-block;"><a id="button-copybook" href="#/Write#">Copybook</a>
+<li class="menu-copybook menu-folding"><a id="button-copybook" href="#/Write#">Copybook</a>
 <menu type="list" id="copybook-select" class="submenu">
 	<li class="selected"><a class="none" href=""></a></li>
 </menu>
