fix js error by having removed blocker

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <meta name="msapplication-tooltip" content="The Shodo">
 <meta name="msapplication-starturl" content="/">
 <meta name="msapplication-window" content="width=1024;height=768">
-<script type="text/javascript">try { Typekit.load(); } catch (e) { }</script> 
 <link rel="stylesheet" href="res/css/base.css">
 <link rel="stylesheet" href="res/css/font.css">
 <script src="res/js/jquery-1.7.min.js"></script>
@@ -43,8 +42,8 @@
 <div id="copybook-layer">
 <!-- Include: shared/img/write/copybook/copybook_all.svg -->
 <svg version="1.1" id="copybook" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="342.875px" height="334.375px" viewBox="0.109 0 342.875 334.375" enable-background="new 0.109 0 342.875 334.375" xml:space="preserve">
-<g id="sho" display="none">
-	<path display="inline" opacity="0.25" fill="#B7282E" d="M154.559,9.431c1.724-1.725,6.492-1.725,14.282,0
+<g id="sho">
+	<path opacity="0.25" fill="#B7282E" d="M154.559,9.431c1.724-1.725,6.492-1.725,14.282,0
 		c5.194,1.745,9.941,4.341,14.283,7.79c2.597,1.745,4.747,3.896,6.492,6.492c-0.873,10.387-1.745,19.476-2.597,27.267
 		c13.836-1.725,27.692-3.895,41.549-6.492c3.448-2.597,6.046-3.449,7.79-2.597c11.239,4.342,20.328,9.535,27.267,15.581
 		c1.725,2.597,1.299,4.768-1.298,6.492c-2.598,1.745-4.768,3.896-6.492,6.492l-7.791,12.984c12.984-0.852,23.798-1.724,32.461-2.597
@@ -79,8 +78,8 @@
 		c12.112-1.725,21.627-3.023,28.565-3.895L216.883,99.021z M187.02,63.963l-2.598,27.267c13.837-1.724,25.522-3.023,35.058-3.895
 		l6.492-23.372c0-2.597-1.745-3.895-5.194-3.895L187.02,63.963z"></path>
 </g>
-<g id="window" display="none">
-	<path display="inline" opacity="0.25" fill="#B7282E" enable-background="new    " d="M80.346,232.297
+<g id="window">
+	<path opacity="0.25" fill="#B7282E" enable-background="new    " d="M80.346,232.297
 		c0.99,6.6,1.65,12.87,1.65,18.48c0,46.199-32.01,57.42-44.55,57.42c-10.23,0-16.5-6.271-16.5-12.87c0-5.61,4.62-11.88,15.18-15.181
 		c13.2-3.629,37.29-15.84,39.27-48.182L80.346,232.297z M21.935,140.886c60.721-17.16,83.821-47.85,92.731-82.831h-46.86
 		c0.66,25.081-14.52,40.59-31.35,40.59c-8.91,0-15.18-4.62-15.18-12.21c0-6.27,5.61-11.88,11.88-14.52
@@ -103,7 +102,7 @@
 		c0,10.56-6.27,17.82-14.188,17.82c-3.302,0-7.262-1.32-10.892-4.291c-5.609-25.74-30.359-55.771-54.119-71.609L247.656,230.646z"></path>
 </g>
 <g id="ki" xlink:title="Benchmark">
-	<path display="inline" opacity="0.25" fill="#B7282E" enable-background="new    " d="M178.027,1.7
+	<path opacity="0.25" fill="#B7282E" enable-background="new    " d="M178.027,1.7
 		c-9.836-1.92-15.729-1.92-17.688,0c0,6.752,1.957,11.563,5.896,14.453c2.948,1.941,4.424,4.832,4.424,8.672V47.95l-50.124,8.672
 		v-7.227c0-3.84-2.465-7.229-7.371-10.117c-3.938-2.892-8.847-5.285-14.74-7.228c-8.847-1.919-14.26-2.394-16.218-1.444
 		c0,7.723,2.441,13.008,7.371,15.897c2.948,1.942,4.423,4.833,4.423,8.672v7.228L45.35,73.965c-2.947,0.971-2.465,2.417,1.475,4.336
@@ -134,7 +133,7 @@
 </g>
 
 <g id="wa" display="none">
-	<path display="inline" opacity="0.25" fill="#B7282E" d="M158.883,39.547c1.853,3.727,0,6.059-5.58,6.975
+	<path opacity="0.25" fill="#B7282E" d="M158.883,39.547c1.853,3.727,0,6.059-5.58,6.975
 		c-15.824,7.455-29.774,13.492-41.85,18.135c9.286,5.58,13.47,12.097,12.555,19.53l-2.79,27.899c9.285,0,17.197-2.311,23.714-6.975
 		c2.79-2.79,6.038-4.185,9.765-4.185c8.37,0,15.802,1.395,22.32,4.185c6.495,1.875,9.765,5.123,9.765,9.765
 		c0,3.727-9.765,6.059-29.295,6.975c-18.614,0.938-30.689,2.79-36.269,5.58l-1.395,34.875c13.012,2.79,26.025,4.664,39.059,5.579
@@ -155,8 +154,8 @@
 		L336.046,138.59z M202.128,156.725l1.396,4.185l13.949,62.773h8.37l55.799-9.765l12.555-69.748
 		c0.916-4.643-2.332-6.038-9.765-4.185L202.128,156.725z"></path>
 </g>
-<g id="cloud" display="none">
-	<path display="inline" opacity="0.25" fill="#B7282E" d="M214.702,15.037c6.715,2.884,9.126,5.769,7.211,8.653
+<g id="cloud">
+	<path opacity="0.25" fill="#B7282E" d="M214.702,15.037c6.715,2.884,9.126,5.769,7.211,8.653
 		c-0.969,3.853-6.265,6.264-15.864,7.211c-10.591,0.969-25.013,2.884-43.265,5.769c5.769,2.884,9.599,6.264,11.538,10.095
 		c1.915,2.884,2.884,9.622,2.884,20.19c41.328-4.8,76.436-9.6,105.279-14.422c0-1.915,1.442-2.884,4.326-2.884
 		c5.769,0,13.927,3.854,24.518,11.538c7.684,5.769,12.979,12.979,15.863,21.632c0,2.885-0.495,4.822-1.441,5.769
@@ -290,7 +289,7 @@
 		C174.068,138.932,172.754,145.502,172.754,150.759z"></path>
 </g>
 <g id="bi" xlink:title="Beautiful">
-	<path display="inline" opacity="0.25" fill="#B7282E" enable-background="new    " d="M210.609,1.467
+	<path opacity="0.25" fill="#B7282E" enable-background="new    " d="M210.609,1.467
 		c-6.887-2.892-9.836-1.445-8.846,4.336c0,4.832,0,9.168,0,13.008c-7.877,16.395-20.154,35.658-36.855,57.813
 		c-34.414,7.723-58,12.059-70.763,13.008c-9.836,0.971-11.794,2.892-5.896,5.781c3.917,1.942,8.847,3.862,14.742,5.781
 		c16.698-3.839,33.399-7.701,50.124-11.563c3.915,1.941,5.896,4.832,5.896,8.672v21.679c-17.691,4.833-34.415,8.672-50.124,11.563
