remove empty img alts

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="write-container-wrap">
 
 <div id="write-paper">
-<img id="write-shitajiki" src="res/img/shitajiki.png" alt="">
+<img id="write-shitajiki" src="res/img/shitajiki.png">
 
 <div id="write-hanshi">
 <div id="copybook-layer">
@@ -322,15 +322,15 @@
 <canvas id="write-canvas" width="415" height="498"></canvas>
 <canvas id="hand-canvas" width="415" height="498"></canvas>
 
-<div id="hanshi"><img id="hanshi-image" src="res/img/hanshi.png" alt=""></div>
+<div id="hanshi"><img id="hanshi-image" src="res/img/hanshi.png"></div>
 <div id="hand"><div id="hand-image">
-<img id="hand-image-large" src="res/img/hand_L.png" width="374" height="563" alt="">
-<img id="hand-image-medium" src="res/img/hand_M.png" width="407" height="552" alt="">
-<img id="hand-image-small" src="res/img/hand_S.png" width="401" height="540" alt="">
+<img id="hand-image-large" src="res/img/hand_L.png" width="374" height="563">
+<img id="hand-image-medium" src="res/img/hand_M.png" width="407" height="552">
+<img id="hand-image-small" src="res/img/hand_S.png" width="401" height="540">
 </div></div>
 <!-- /write-hanshi --></div>
 
-<img id="write-bunchin" src="res/img/bunchin.png" alt="">
+<img id="write-bunchin" src="res/img/bunchin.png">
 <!-- /write-paper --></div>
 
 <div id="write-tools">
@@ -340,7 +340,7 @@
 <a id="write-tools-ink"><img id="write-tools-ink-label" class="rollover" src="res/img/btn_suzuri_01.png" alt="硯 - Ink Selection"></a>
 <a id="write-tools-stage">
 <img id="write-tools-stage-label" class="rollover" src="res/img/btn_fude_01.png" alt="筆 - Brush Selection">
-<img id="write-fude-small" src="res/img/fude_L.png" alt=""><img id="write-fude-medium" src="res/img/fude_M.png" alt=""><img id="write-fude-large" src="res/img/fude_B.png" alt="">
+<img id="write-fude-small" src="res/img/fude_L.png"><img id="write-fude-medium" src="res/img/fude_M.png"><img id="write-fude-large" src="res/img/fude_B.png">
 <!-- /write-tools-stage --></a>
 
 <a id="hand-visibility-checkbox" class="checked">show hand holding brush</a>
