bring back in top-menu fade in

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 <!-- /write-container --></div>
 <!-- /write-stage --></div>
 
-<menu type="list" id="top-menu" style="top: 0px;">
+<menu type="list" id="top-menu">
 <li class="menu-clear"><a id="button-clear">Clear</a></li>
 <li class="menu-finish"><a id="button-finish">Finish</a></li>
 <li class="menu-paper menu-folding"><a id="button-paper">Paper</a>
