bring back fade in of floating panel

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 
 <!-- floating panel -->
 <div class="floating-mask" style="display: none;">
-<div class="floating-panel" style="top: 52%; opacity: 0;">
+<div class="floating-panel">
 <h1 class="floating-panel-title"></h1>
 <div class="floating-panel-close"><a>Close</a></div>
 <div class="floating-panel-body">
