format html head

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<!-- saved from url=(0029)http://www.theshodo.com/Write -->
-<html xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Write | The Shodo</title>
-<meta name="description" content="This site displays the powerful new features in Internet Explorer through Japanese traditional culture &quot;Shodo&quot;. This site design is based on HTML5, SVG, and Web Font.">
-<meta name="keywords" content="Shodo,Internet Explorer,HTML5,書道,Business Architects Inc.,experience">
-<meta name="application-name" content="The Shodo">
-<meta name="msapplication-tooltip" content="The Shodo">
-<meta name="msapplication-starturl" content="/">
-<meta name="msapplication-window" content="width=1024;height=768">
-<link rel="stylesheet" href="res/css/base.css">
-<link rel="stylesheet" href="res/css/font.css">
-<script src="res/js/jquery-1.7.min.js"></script>
-<script src="res/js/TheShodo.js"></script>
-<script src="res/js/TheShodo.FloatingPanel.js"></script>
-<link rel="stylesheet" href="res/css/index.css">
-<script src="res/js/TheShodo.Shodo.Core.js"></script>
-<script src="res/js/TheShodo.Shodo.Player.js"></script>
-<script src="res/js/TheShodo.Shodo.Resources.js"></script>
-<script src="res/js/TheShodo.Shodo.Write.js"></script>
-<script src="res/js/kazari.js"></script>
-<script src="res/js/floatingPanels.js"></script>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta charset="UTF-8">
+	<title>The Shodo | A Reproduction</title>
+	<meta name="description" content="This site displays Japanese traditional culture &quot;Shodo&quot;. This site design is based on HTML5, SVG, and Web Font.">
+	<meta name="keywords" content="Shodo,HTML5,書道,experience">
+	<meta name="application-name" content="The Shodo">
+	<meta name="msapplication-tooltip" content="The Shodo">
+	<meta name="msapplication-starturl" content="/">
+	<meta name="msapplication-window" content="width=1024;height=768">
+	<link rel="stylesheet" href="res/css/base.css">
+	<link rel="stylesheet" href="res/css/font.css">
+	<script src="res/js/jquery-1.7.min.js"></script>
+	<script src="res/js/TheShodo.js"></script>
+	<script src="res/js/TheShodo.FloatingPanel.js"></script>
+	<link rel="stylesheet" href="res/css/index.css">
+	<script src="res/js/TheShodo.Shodo.Core.js"></script>
+	<script src="res/js/TheShodo.Shodo.Player.js"></script>
+	<script src="res/js/TheShodo.Shodo.Resources.js"></script>
+	<script src="res/js/TheShodo.Shodo.Write.js"></script>
+	<script src="res/js/kazari.js"></script>
+	<script src="res/js/floatingPanels.js"></script>
 </head>
 <body class="write">
 <header class="site-title">
@@ -29,7 +29,6 @@
 </header>
 
 <article class="content">
-
 
 <div class="write-stage">
 <div class="write-container">
