rename 'copybook' to 'model' in top menu

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 <!-- /submenu --></div>
 <a class="close-menu">Close</a>
 <!-- /menu-paper --></li>
-<li class="menu-copybook menu-folding"><a id="button-copybook">Copybook</a>
+<li class="menu-copybook menu-folding"><a id="button-copybook">Model</a>
 <menu type="list" id="copybook-select" class="submenu">
 	<li class="selected"><a class="none"></a></li>
 </menu>
