rename title, fix css urls to missing res

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
-	<title>The Shodo | A Reproduction</title>
+	<title>The Shodo | Revived</title>
 	<meta name="description" content="This site displays Japanese traditional culture &quot;Shodo&quot;. This site design is based on HTML5, SVG, and Web Font.">
 	<meta name="keywords" content="Shodo,HTML5,書道,experience">
 	<meta name="application-name" content="The Shodo">
