--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="write">
 <header class="site-title">
-<h1 class="title"><a href="http://www.theshodo.com/"><img src="res/img/logo_side_01.png" width="60" height="224" alt="The Shodo"></a></h1>
+<h1 class="title"><img src="res/img/logo_side_01.png" width="60" height="224" alt="The Shodo"></h1>
 </header>
 
 <article class="content">
