bring in a few images retrieved from webarchive

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<script src="res/js/TheShodo.Shodo.Write.js"></script>
 	<script src="res/js/kazari.js"></script>
 	<script src="res/js/floatingPanels.js"></script>
+	<link rel="icon" href="/favicon.ico" />
 </head>
 <body class="write">
 <header class="site-title">
@@ -462,7 +463,7 @@
 <div class="floating-mask" style="display: none;">
 <div class="floating-panel">
 <h1 class="floating-panel-title"></h1>
-<div class="floating-panel-close"><a>Close</a></div>
+<div class="floating-panel-close"><a href="#">Close</a></div>
 <div class="floating-panel-body">
 <div class="floating-panel-body-content"></div>
 <div class="floating-panel-buttons" style="display: block;">
