disable paper menu due to missing image for drawing canvas

--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
 <menu type="list" id="top-menu">
 <li class="menu-clear"><a id="button-clear">Clear</a></li>
 <li class="menu-finish"><a id="button-finish">Finish</a></li>
-<li class="menu-paper menu-folding"><a id="button-paper">Paper</a>
+
+<!-- <li class="menu-paper menu-folding"><a id="button-paper">Paper</a>
 <div class="submenu">
 <span class="label-paper">Paper</span>
 <menu type="list" id="paper-select">
@@ -365,8 +366,10 @@
 <li><a data-paper-name="paper_06"><img src="res/img/paper_thumb_06.png" width="54" height="54"></a></li>
 <li><a data-paper-name="paper_07"><img src="res/img/paper_thumb_07.png" width="54" height="54"></a></li>
 </menu>
+-->
 <!-- /submenu --></div>
-<a class="close-menu">Close</a>
+<!-- <a class="close-menu">Close</a> -->
+
 <!-- /menu-paper --></li>
 <li class="menu-copybook menu-folding"><a id="button-copybook">Model</a>
 <menu type="list" id="copybook-select" class="submenu">
