change 'finish' windows cancel button to replay, remove comment textbox since we are no longer uploading

--- a/index.html
+++ b/index.html
@@ -431,7 +431,6 @@
 <img class="preview" width="330" height="396" />
 <span class="tenkoku" />
 </div>
-<div class="replay"><a class="replay">Replay</a></div>
 <!-- /panel-left --></div>
 <div class="panel-right">
 <div>
@@ -441,11 +440,12 @@
 </label>
 </div>
 
-<div>
+<!-- <div>
 <label><span>Comment ( upto 100 characters )</span><span class="comment-characters-limit">100</span>
 <textarea name="Comment" rows="3"></textarea>
 </label>
-</div>
+</div> -->
+
 <!-- /panel-right --></div>
 <div style="display:none">
 <input id="Data" name="Data" type="hidden" value="" />
@@ -470,8 +470,7 @@
 <div class="floating-panel-body">
 <div class="floating-panel-body-content"></div>
 <div class="floating-panel-buttons" style="display: block;">
-
-<input type="button" value="OK" class="button"></div>
+</div>
 </div>
 </div>
 </div>
