bundle js/css with gulp

--- a/index.html
+++ b/index.html
@@ -10,17 +10,8 @@
 	<meta name="msapplication-tooltip" content="The Shodo">
 	<meta name="msapplication-starturl" content="/">
 	<meta name="msapplication-window" content="width=1024;height=768">
-	<link rel="stylesheet" href="res/css/base.css">
-	<script src="res/js/jquery-1.7.min.js"></script>
-	<script src="res/js/TheShodo.js"></script>
-	<script src="res/js/TheShodo.FloatingPanel.js"></script>
-	<link rel="stylesheet" href="res/css/index.css">
-	<script src="res/js/TheShodo.Shodo.Core.js"></script>
-	<script src="res/js/TheShodo.Shodo.Player.js"></script>
-	<script src="res/js/TheShodo.Shodo.Resources.js"></script>
-	<script src="res/js/TheShodo.Shodo.Write.js"></script>
-	<script src="res/js/kazari.js"></script>
-	<script src="res/js/floatingPanels.js"></script>
+	<link rel="stylesheet" href="res/css/bundle.css">
+	<script src="res/js/bundle.js"></script>
 	<link rel="icon" href="/favicon.ico" />
 </head>
 <body class="write">
