fix url if hosted in non-root

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<title>The Shodo | Revived</title>
 	<meta name="description" content="This site displays Japanese traditional culture &quot;Shodo&quot;. This site design is based on HTML5, SVG, and Web Font.">
 	<meta name="keywords" content="Shodo,HTML5,書道,experience">
-	<meta name="application-name" content="The Shodo">
-	<meta name="msapplication-tooltip" content="The Shodo">
-	<meta name="msapplication-starturl" content="/">
-	<meta name="msapplication-window" content="width=1024;height=768">
 	<link rel="stylesheet" href="res/css/bundle.css">
 	<script src="res/js/bundle.js"></script>
-	<link rel="icon" href="/favicon.ico" />
+	<script>
+		TheShodo.baseUrl =
+		TheShodo.storageBaseUrl =
+		TheShodo.sharedBaseUrl = '/shodo';
+	</script>
+	<link rel="icon" href="favicon.ico" />
 </head>
 <body class="write">
 <header class="site-title">
