--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     TheShodo.baseUrl = 
     TheShodo.storageBaseUrl = 
     TheShodo.sharedBaseUrl = '/shodo';
-    </script>
+    var sc_project = 11833584, sc_invisible = 1, sc_security = "164ff05c";
+	</script>
+	<script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
 	<link rel="icon" href="favicon.ico" />
 </head>
 <body class="write">
