--- a/index.html
+++ b/index.html
@@ -6,14 +6,30 @@
 	<title>The Shodo | Revived</title>
 	<meta name="description" content="This site displays Japanese traditional culture &quot;Shodo&quot;. This site design is based on HTML5, SVG, and Web Font.">
 	<meta name="keywords" content="Shodo,HTML5,書道,experience">
-	<link rel="stylesheet" href="res/css/bundle.css">
-	<script src="res/js/bundle.js"></script>
+
+<!--	<link rel="stylesheet" href="res/css/bundle.css">-->
+<!--	<script src="res/js/bundle.js"></script>-->
+	<link rel="stylesheet" href="res/css/base.css">
+	<link rel="stylesheet" href="res/css/index.css">
+	<script src="res/js/jquery-1.7.min.js"></script>
+	<script src="res/js/TheShodo.js"></script>
+	<script src="res/js/TheShodo.FloatingPanel.js"></script>
+	<script src="res/js/TheShodo.Shodo.Core.js"></script>
+	<script src="res/js/TheShodo.Shodo.Player.js"></script>
+	<script src="res/js/TheShodo.Shodo.Resources.js"></script>
+	<script src="res/js/TheShodo.Shodo.Write.js"></script>
+	<script src="res/js/kazari.js"></script>
+	<script src="res/js/floatingPanels.js"></script>
+
+
 	<script>
 		TheShodo.baseUrl =
 		TheShodo.storageBaseUrl =
 		TheShodo.sharedBaseUrl = '/shodo';
 	</script>
 	<link rel="icon" href="favicon.ico" />
+
+
 </head>
 <body class="write">
 <header class="site-title">
